# RTGS-AI-Analyst

./: README.md  run.py
agentic_ai/: .gitignore  README.md  pyproject.toml
agentic_ai/src/agentic_ai/: crew.py  llm_config.py  main.py
agentic_ai/src/agentic_ai/config/: agents.yaml  llm_config.yaml  tasks.yaml
agentic_ai/src/agentic_ai/tools/: data_tools.py  detect_outliers_tool.py  trend_analysis_tool.py
agentic_ai_system/: .gitignore  README.md  pyproject.toml
agentic_ai_system/knowledge/: user_preference.txt
agentic_ai_system/src/agentic_ai_system/: crew.py  main.py
agentic_ai_system/src/agentic_ai_system/config/: agents.yaml  tasks.yaml
agentic_ai_system/src/agentic_ai_system/tools/: __init__.py  data_tools.py  detect_outliers_tool.py  save_chart_tool.py  trend_analysis_tool.py
analyst/: .gitignore  README.md  pyproject.toml  test_gemini_api.py
analyst/data/: birth_data.csv
analyst/knowledge/: user_preference.txt
analyst/src/analyst/: crew.py  main.py
analyst/src/analyst/tools/: __init__.py  data_tools.py  save_chart_tool.py
rtgs_agentic_system/: README.md
